Fix new window links accessibility: wrap arrow in aria-hidden span, add screen reader text
Agent-Logs-Url: https://github.com/equalizedigital/accessibility-checker/sessions/591b1603-e301-42ce-af84-1af5927de04e

--- a/src/frontendHighlighterApp/sass/app.scss
+++ b/src/frontendHighlighterApp/sass/app.scss
@@ -127,6 +127,19 @@ body {
 			color: variables.$color-white !important;
 		}
 
+		.screen-reader-text {
+			border: 0 !important;
+			clip: rect(1px, 1px, 1px, 1px) !important;
+			clip-path: inset(50%) !important;
+			height: 1px !important;
+			margin: -1px !important;
+			overflow: hidden !important;
+			padding: 0 !important;
+			position: absolute !important;
+			width: 1px !important;
+			word-wrap: normal !important;
+		}
+
 		&--right {
 			right: 15px !important;
 		}
